framework/contracts/account/tests/snapshots/apps__account_install_app.snap
---
source: contracts/account/tests/apps.rs
expression: all_storage
---
"abstract:account-local-0":
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"Default Abstract Account\"}"
  - - af
    - "[]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":0}"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":{\"monarchy\":{\"monarch\":\"mock16g2rahf5846rxzp3fwlswy08fz8ccuwkgsny9p\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:account-local-1":
  - - "\u0000\u0002actester:app"
    - "\"mock1wwzns2y82kqa99x9c0vzy2g54246ggljg7du8f3esey9kz45kdjq8e27za\""
  - - aa
    - "false"
  - - ab
    - "{\"name\":\"Default Abstract Account\"}"
  - - af
    - "[\"mock1wwzns2y82kqa99x9c0vzy2g54246ggljg7du8f3esey9kz45kdjq8e27za\"]"
  - - ag
    - "{\"trace\":\"local\",\"seq\":1}"
  - - ah
    - "[[{\"info\":{\"namespace\":\"tester\",\"name\":\"app\",\"version\":{\"version\":\"1.0.0\"}},\"reference\":{\"app\":13}},\"mock1wwzns2y82kqa99x9c0vzy2g54246ggljg7du8f3esey9kz45kdjq8e27za\"]]"
  - - ai
    - "[]"
  - - contract_info
    - "{\"contract\":\"abstract:account\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":{\"monarchy\":{\"monarch\":\"mock1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qwrtv4f\"}},\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ans-host":
  - - be
    - "[]"
  - - cfg
    - "{\"next_unique_pool_id\":1}"
  - - contract_info
    - "{\"contract\":\"abstract:ans-host\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock16g2rahf5846rxzp3fwlswy08fz8ccuwkgsny9p\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-client":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-client\",\"version\":\"0.23.0\"}"
  - - mod
    - "{\"module\":\"abstract:ibc-client\",\"version\":\"0.23.0\",\"dependencies\":[],\"metadata\":null}"
  - - ownership
    - "{\"owner\":\"mock16g2rahf5846rxzp3fwlswy08fz8ccuwkgsny9p\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:ibc-host":
  - - contract_info
    - "{\"contract\":\"abstract:ibc-host\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock16g2rahf5846rxzp3fwlswy08fz8ccuwkgsny9p\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:module-factory":
  - - contract_info
    - "{\"contract\":\"abstract:module-factory\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock16g2rahf5846rxzp3fwlswy08fz8ccuwkgsny9p\",\"pending_owner\":null,\"pending_expiry\":null}"
"abstract:version-control":
  - - "\u0000\u0002cb\u0000\u0006tester\u0000\u0003app1.0.0"
    - "{\"app\":13}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u0007account0.23.0"
    - "{\"account\":5}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bans-host0.23.0"
    - "{\"native\":\"mock17r8ljc3tw8tdx85gpwxpq5ten89622svh2ct0utcg75x89ed7cgsyz0g62\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\bibc-host0.23.0"
    - "{\"native\":\"mock19jf2y29m2qvgfezcyy5zhq8phfdcysngew508eeumdsg2dyzqrqshlx44z\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\nibc-client0.23.0"
    - "{\"native\":\"mock1u377ag8ewzrskj6r0pqutnpyvh7hd2yqq6uh3rh2pclex2gzhslsq3frn0\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000emodule-factory0.23.0"
    - "{\"native\":\"mock10ymkph7y47lmxkyan49cq2yjm5m3n2nk83efppcwwpunx7gs374qg8fkqs\"}"
  - - "\u0000\u0002cb\u0000\babstract\u0000\u000fversion-control0.23.0"
    - "{\"native\":\"mock18aq2nqrm809gdktwetuk6c48c6yj379ptkdeewv6j797xv3j2gssdzgurv\"}"
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0000"
    - "\"mock183tnnc2hqt8tj677neekarwkmlygw09uqrchq4c2aaauleyxzc3sy9w235\""
  - - "\u0000\u0002ch\u0000\u0005local\u0000\u0000\u0000\u0001"
    - "\"mock1jdl4tasw0x00k2edyf8656lqxy95gx06h2nt5n8qjzv45yxr5ekq0myk0q\""
  - - "\u0000\u0005nmspcabstract"
    - "{\"trace\":\"local\",\"seq\":0}"
  - - "\u0000\u0005nmspctester"
    - "{\"trace\":\"local\",\"seq\":1}"
  - - "\u0000\u0007nmspc_a\u0000\u0005local\u0000\u0004\u0000\u0000\u0000\u0000abstract"
    - "8"
  - - "\u0000\u0007nmspc_a\u0000\u0005local\u0000\u0004\u0000\u0000\u0000\u0001tester"
    - "6"
  - - cfg
    - "{\"security_disabled\":true,\"namespace_registration_fee\":null}"
  - - ci
    - "2"
  - - contract_info
    - "{\"contract\":\"abstract:version-control\",\"version\":\"0.23.0\"}"
  - - ownership
    - "{\"owner\":\"mock16g2rahf5846rxzp3fwlswy08fz8ccuwkgsny9p\",\"pending_owner\":null,\"pending_expiry\":null}"
"tester:app":
  - - admin
    - "\"mock1jdl4tasw0x00k2edyf8656lqxy95gx06h2nt5n8qjzv45yxr5ekq0myk0q\""
  - - base_state
    - "{\"account\":\"mock1jdl4tasw0x00k2edyf8656lqxy95gx06h2nt5n8qjzv45yxr5ekq0myk0q\",\"ans_host\":{\"address\":\"mock17r8ljc3tw8tdx85gpwxpq5ten89622svh2ct0utcg75x89ed7cgsyz0g62\"},\"version_control\":{\"address\":\"mock18aq2nqrm809gdktwetuk6c48c6yj379ptkdeewv6j797xv3j2gssdzgurv\"}}"
  - - contract_info
    - "{\"contract\":\"tester:app\",\"version\":\"1.0.0\"}"
  - - mod
    - "{\"module\":\"tester:app\",\"version\":\"1.0.0\",\"dependencies\":[],\"metadata\":null}"
